--- a/onlinemeal/style.css
+++ b/onlinemeal/style.css
@@ -256,4 +256,9 @@ input{
     padding: 16px 40px;
     
 }
-
+@media only screen and (max-width: 600px){
+    #services{
+        display: flex;
+    flex-direction: column;
+    }
+}
